--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
       <artifactId>jstl</artifactId>
       <version>1.1.2</version>
     </dependency>
+    <!--    Embedded Tomcat server-->
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-jasper</artifactId>
+      <version>8.5.15</version>
+    </dependency>
   </dependencies>
 
   <build>
