--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,8 +1,9 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3309/ssiiagency
+jdbc.url=jdbc:mysql://localhost:3333/ssiiagency
 jdbc.username=root
 jdbc.password=password
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.hbm2ddl.auto=update
+hibernate.enable_lazy_load_no_trans=true
