setting up models (adding constructors, setters and toString() method)

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3333/ssiiagency
+jdbc.url=jdbc:mysql://localhost:3333/database
 jdbc.username=root
 jdbc.password=password
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
@@ -7,3 +7,4 @@ hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.hbm2ddl.auto=update
 hibernate.enable_lazy_load_no_trans=true
+hibernate.connection.autocommit=true
