--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,16 @@
       <artifactId>tomcat-embed-jasper</artifactId>
       <version>8.5.15</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>4.1.3.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>4.1.3.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <build>
